# Azure-Python-Standardization-Template-Generator

./: README.md  cookiecutter.json  ps-rule.yaml  requirements.in  requirements.txt
.github/workflows/: audit.yml
hooks/: post_gen_project.py  pre_gen_project.py
templates/: abbreviations.txt  conftest_flask_sql.py  docker_compose_mysql.yml  flask_test_pages_mongodb.py  flask_test_pages_postgres.py  pages_macros.py
tests/: conftest.py  test_cookiecutter_generation.py
tools/: README.md  update_info.py
{{cookiecutter.__src_folder_name}}/: README.md  ps-rule.yaml  pyproject.toml
{{cookiecutter.__src_folder_name}}/.devcontainer/: Dockerfile_dev  devcontainer.json  docker-compose_dev.yml
{{cookiecutter.__src_folder_name}}/.github/workflows/: audit-bicep.yml  test_mongodb.yml  test_mysql.yml  test_postgres.yml
{{cookiecutter.__src_folder_name}}/infra/: aca.bicep  appservice.bicep  db.bicep  main.bicep  main.parameters.json  main.test.bicep
{{cookiecutter.__src_folder_name}}/infra/db/: cosmos-mongodb.bicep  cosmos-postgres.bicep  postgres-addon.bicep  postgres-flexible.bicep
{{cookiecutter.__src_folder_name}}/src/: Dockerfile  entrypoint.sh  requirements.txt
{{cookiecutter.__src_folder_name}}/src/db/: sql_db_models.py  sql_db_seeder.py
{{cookiecutter.__src_folder_name}}/src/django/: manage.py
{{cookiecutter.__src_folder_name}}/src/fastapi/: pyproject.toml
{{cookiecutter.__src_folder_name}}/src/fastapi/fastapi_app/: app.py  models.py  seed_data.py
{{cookiecutter.__src_folder_name}}/src/flask/: pyproject.toml
(+20 files in other folders)
