[project]
name = "fastapi_app"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "fastapi",
    "jinja2",
    "uvicorn[standard]",
    "python-multipart",
    {% if 'postgres' in cookiecutter.db_resource %}
    "psycopg2",
    "sqlmodel",
    {% endif %}
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
