[project]
name = "fastapi_app"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "azure-monitor-opentelemetry",
    "fastapi",
    "jinja2",
    "uvicorn[standard]",
    "python-multipart",
    "psycopg2",
    "sqlmodel",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
