[project]
name = "fastapi_app"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "azure-monitor-opentelemetry",
    "fastapi",
    "jinja2",
    "uvicorn[standard]",
    "python-multipart",
    {% if 'postgres' in cookiecutter.db_resource%}
    "psycopg2-binary",
    {% endif %}
    {% if 'mysql' in cookiecutter.db_resource%}
    "mysql-connector-python",
    {% endif %}
    "sqlmodel",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
